Transaction id edit and corrections on order info display for custom payments.

--- a/src/Modules/Laser.Orchard.Translator/Views/Translator/TranslatorForm.cshtml
+++ b/src/Modules/Laser.Orchard.Translator/Views/Translator/TranslatorForm.cshtml
@@ -190,7 +190,7 @@
 
                                                             @Html.DropDownListFor(m => m.Language, new SelectList(Model.CultureList.ToList(), Model.Language), new { style = "display:none;" })
                                                         </td>
-                                                        <td rowspan="3" style="vertical-align: middle;"><input id="enable-edit" name="enableEdit" class="button" value="@T("Abilita modifica")" /></td>
+                                                        <td rowspan="3" style="vertical-align: middle;"><input id="enable-edit" name="enableEdit" class="button" value="@T("Enable edit")" /></td>
                                                     </tr>
                                                     <tr>
                                                         <th style="width:50%">@T("Container Name")</th>
