Added hidden flag to manage transaction id edit in the view model in a more explicit way.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml
@@ -49,6 +49,7 @@
                     <tr>
                         <td width="20%">@T("Transaction ID")</td>
                         <td>
+                            @Html.HiddenFor(m => m.EditTransactionId)
                             <span id="transactionIdSpan">@Model.TransactionId</span>
                             @if (canEditTransactionId) {
                                 @Html.TextBoxFor(m => m.TransactionId, new { style = "display: none; width: 250px;" })
@@ -81,6 +82,7 @@
                 e.preventDefault();
                 $('#transactionIdSpan').hide();
                 $('#enable-edit').hide();
+                $("#@Html.FieldIdFor(m => m.EditTransactionId)").val(true);
                 $("#@Html.FieldIdFor(m => m.TransactionId)").show();
             });
         });
