--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/AuditTrailOutputSettings.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/AuditTrailOutputSettings.cshtml
@@ -19,7 +19,7 @@
             @T("This is a Source for the \"Application\" stream of Windows System Events. A source by this name must be configured by a system's administrator.")
         </span>
     </div>
-    <h2>@T("Enable loggin in the File System (using Log4Net)")</h2>
+    <h2>@T("Enable logging in the File System (using Log4Net)")</h2>
     <div>
         @Html.CheckBoxFor(m => m.IsFileSystemEnabled)
         @Html.LabelFor(m => m.IsFileSystemEnabled, 
