--- a/src/Modules/Laser.Orchard.PaymentGateway/Views/PosPayButton_CashOnDelivery.cshtml
+++ b/src/Modules/Laser.Orchard.PaymentGateway/Views/PosPayButton_CashOnDelivery.cshtml
@@ -1,6 +1,6 @@
 ﻿<button type="submit"
         name="SelectedPosService"
-        value="CustomPos_@Model.PosName"
+        value="@Model.PosName"
         style="padding: 10px 10px;"
         class="btn btn__bg d-block">
     @T("Pay on Delivery")
