Glyphicons support for Bootstrap 4

--- a/src/Themes/KrakeAdmin/Views/Document.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Document.cshtml
@@ -47,6 +47,7 @@ Script.Require("jQuery_DataTables").AtHead();
 
 //---- include css files ----//
 Style.Require("Bootstrap").AtHead();
+Style.Require("GlyphiconsFontawesome").AtHead();
 Style.Require("jQuery_DataTables").AtHead();
 
 // Base theme
