--- a/src/Themes/KrakeAdmin/Views/Parts.Contents.Clone.SummaryAdmin.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Parts.Contents.Clone.SummaryAdmin.cshtml
@@ -4,5 +4,5 @@
     ContentPart contentPart = Model.ContentPart;
 }
 @if (Authorizer.Authorize(Permissions.CreateContent, contentPart)) {
-    <a href="@Url.Action("Clone", "Admin", new { Id = Model.ContentItem.Id, ReturnUrl = Request.RawUrl, Area = "Contents" })" class="btn btn-primary btn-xs" itemprop="UnsafeUrl">@T("Clone")</a>
+    <a href="@Url.Action("Clone", "Admin", new { Id = Model.ContentItem.Id, ReturnUrl = Request.RawUrl, Area = "Contents" })" class="btn btn-primary btn-sm" itemprop="UnsafeUrl">@T("Clone")</a>
 }
