--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
@@ -80,13 +80,13 @@
                         @if (autoroutePart != null) {
                             if (contentItem.HasPublished()) {
                                 <a href="@Url.ItemDisplayUrl(contentItem)"
-                                   class="btn btn-success btn-xs text-white width-80"
+                                   class="btn btn-success btn-sm text-white width-80"
                                    target="_blank"
                                    title="@T("View")">
                                     <span class="glyphicon glyphicon-new-window"></span>
                                     @T("View").Text
                                 </a>
-                                @*@Html.ItemDisplayLink(T("View").Text, contentItem, new { @class = "btn btn-success btn-xs text-white" })*@
+                                @*@Html.ItemDisplayLink(T("View").Text, contentItem, new { @class = "btn btn-success btn-sm text-white" })*@
                             }
                         }
                     </span>
@@ -127,13 +127,12 @@
                                 if (contentItem.HasDraft()) {
                                     if (Authorizer.Authorize(Permissions.PreviewContent, contentItem)) {
                                         <a href="@Url.Action("Display", "Item",  new { area = "Contents", id = contentItem.Id, version = contentItem.Version })"
-                                           class="btn btn-warning btn-xs text-white width-80"
+                                           class="btn btn-warning btn-sm text-white width-80"
                                            target="_blank"
                                            title="@T("Preview")">
                                             <span class="glyphicon glyphicon-new-window"></span>
                                             @T("Preview").Text
                                         </a>
-                                        @*@Html.ActionLink(T("Preview").Text, "Display", "Item", new { area = "Contents", id = contentItem.Id, version = contentItem.Version }, new { @class = "btn btn-warning btn-xs text-white" })*@
                                     }
                                 }
                             }
@@ -141,13 +140,12 @@
                                 if (contentItem.HasDraft()) {
                                     if (Authorizer.Authorize(Permissions.PreviewContent, contentItem)) {
                                         <a href="@Url.Action("Display", "Item",  new { area = "Contents", id = contentItem.Id, version = contentItem.Version })"
-                                           class="btn btn-warning btn-xs text-white width-80"
+                                           class="btn btn-warning btn-sm text-white width-80"
                                            target="_blank"
                                            title="@T("Preview")">
                                             <span class="glyphicon glyphicon-new-window"></span>
                                             @T("Preview").Text
                                         </a>
-                                        @*@Html.ActionLink(T("Preview").Text, "Display", "Item", new { area = "Contents", id = contentItem.Id, version = contentItem.Version }, new { @class = "btn btn-warning btn-xs text-white" })*@
                                     }
                                 }
                             }
