--- a/src/Themes/KrakeAdmin/Views/Parts.Contents.Publish.SummaryAdmin.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Parts.Contents.Publish.SummaryAdmin.cshtml
@@ -7,30 +7,30 @@
     ContentPart contentPart = Model.ContentPart;
 }
 @if (contentPart.HasPublished()) {
-    @Html.ItemDisplayLink(T("View").Text, (ContentItem)Model.ContentPart.ContentItem, new { @class = "btn btn-primary btn-xs" })
+    @Html.ItemDisplayLink(T("View").Text, (ContentItem)Model.ContentPart.ContentItem, new { @class = "btn btn-primary btn-sm" })
 
     if (contentPart.HasDraft()) {
         if (Authorizer.Authorize(Permissions.PublishContent, contentPart)) {
-            @Html.Link(T("Publish Draft").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = contentPart.ContentItem.Id, returnUrl = Request.RawUrl }), new { @class = "btn btn-success btn-xs", itemprop = "UnsafeUrl" })
+            @Html.Link(T("Publish Draft").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = contentPart.ContentItem.Id, returnUrl = Request.RawUrl }), new { @class = "btn btn-success btn-sm", itemprop = "UnsafeUrl" })
         }
 
         if (Authorizer.Authorize(Permissions.PreviewContent, contentPart)) {
-            @Html.ActionLink(T("Preview").Text, "Display", "Item", new { area = "Contents", id = ((ContentItem)Model.ContentPart.ContentItem).Id, version = ((ContentItem)Model.ContentPart.ContentItem).Version }, new { @class = "btn btn-primary btn-xs" })
+            @Html.ActionLink(T("Preview").Text, "Display", "Item", new { area = "Contents", id = ((ContentItem)Model.ContentPart.ContentItem).Id, version = ((ContentItem)Model.ContentPart.ContentItem).Version }, new { @class = "btn btn-primary btn-sm" })
         }
     }
 
     if (Authorizer.Authorize(Permissions.PublishContent, contentPart)) {
-        @Html.Link(T("Unpublish").Text, Url.Action("Unpublish", "Admin", new { area = "Contents", id = contentPart.ContentItem.Id, returnUrl = Request.RawUrl }), new { @class = "btn btn-warning btn-xs", itemprop = "UnsafeUrl" })
+        @Html.Link(T("Unpublish").Text, Url.Action("Unpublish", "Admin", new { area = "Contents", id = contentPart.ContentItem.Id, returnUrl = Request.RawUrl }), new { @class = "btn btn-warning btn-sm", itemprop = "UnsafeUrl" })
     }
 }
 else {
     if (contentPart.HasDraft()) {
         if (Authorizer.Authorize(Permissions.PreviewContent, contentPart)) {
-            @Html.ActionLink(T("Preview").Text, "Display", "Item", new { area = "Contents", id = ((ContentItem)Model.ContentPart.ContentItem).Id, version = ((ContentItem)Model.ContentPart.ContentItem).Version }, new { @class = "btn btn-primary btn-xs" })
+            @Html.ActionLink(T("Preview").Text, "Display", "Item", new { area = "Contents", id = ((ContentItem)Model.ContentPart.ContentItem).Id, version = ((ContentItem)Model.ContentPart.ContentItem).Version }, new { @class = "btn btn-primary btn-sm" })
         }
     }
 
     if (Authorizer.Authorize(Permissions.PublishContent, contentPart)) {
-        @Html.Link(T("Publish").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = contentPart.ContentItem.Id, returnUrl = Request.RawUrl }), new { @class = "btn btn-success btn-xs", itemprop = "UnsafeUrl" })
+        @Html.Link(T("Publish").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = contentPart.ContentItem.Id, returnUrl = Request.RawUrl }), new { @class = "btn btn-success btn-sm", itemprop = "UnsafeUrl" })
     }
 }
