--- a/src/Themes/KrakeAdmin/Views/PlaceholderLogo.cshtml
+++ b/src/Themes/KrakeAdmin/Views/PlaceholderLogo.cshtml
@@ -56,11 +56,11 @@
 
 @if (!String.IsNullOrWhiteSpace(backgroundImage)) {
     <div class="logo-icon">
-        <img src="@backgroundImage" class="img-responsive" />
+        <img src="@backgroundImage" class="img-fluid" />
     </div>
 }
 @if (!String.IsNullOrWhiteSpace(backgroundImageMinimized)) {
     <div class="logo-icon-minimized">
-        <img src="@backgroundImageMinimized" class="img-responsive" />
+        <img src="@backgroundImageMinimized" class="img-fluid" />
     </div>
 }
