--- a/src/Themes/KrakeAdmin/Views/Dashboard/Admin/Index.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Dashboard/Admin/Index.cshtml
@@ -16,7 +16,7 @@
 			<div class="dashboard-box dashboard-box-cms" ontouchstart="this.classList.toggle('hover');">
 				<div class="dashboard-card">
 					<div class="dashboard-card-face dashboard-box-front text-center ">
-						<div class="dasboard-box-icon"><img src="@folderStylePath/Images/icon-cms.png" class="img-responsive"></div>
+						<div class="dasboard-box-icon"><img src="@folderStylePath/Images/icon-cms.png" class="img-fluid"></div>
 						<h4 class="dashboard-box-title">@T("CMS")</h4>
 						<div class="dashboard-box-content">
 							@T("A simple and transparent interface to manage content (and processes) multifaceted and heterogeneous.")
@@ -24,8 +24,8 @@
 					</div>
 					<div class="dashboard-card-face dashboard-box-back">
 						<div class="row no-margin">
-							<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 no-padding">
-								<img src="@folderStylePath/Images/icon-cms.png" class="img-responsive dashboard-rear-panel-icon">
+							<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+								<img src="@folderStylePath/Images/icon-cms.png" class="img-fluid dashboard-rear-panel-icon">
 							</div>
 							<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
 								<div class="space-40"></div>
@@ -34,7 +34,7 @@
 										<h4 class="dashboard-list-subtitle">@T("Import and Export")</h4>
 									</div>
 									<div class="col-xs-6 text-center">
-										<img src="@folderStylePath/Images/cms-import-export.png" class="img-responsive">
+										<img src="@folderStylePath/Images/cms-import-export.png" class="img-fluid">
 									</div>
 								</div>
 								<div class="row no-margin dashboard-list-item">
@@ -42,7 +42,7 @@
 										<h4 class="dashboard-list-subtitle">@T("More and less")</h4>
 									</div>
 									<div class="col-xs-6 text-center">
-										<img src="@folderStylePath/Images/cms-di-piu-di-meno.png" class="img-responsive">
+										<img src="@folderStylePath/Images/cms-di-piu-di-meno.png" class="img-fluid">
 									</div>
 								</div>
 								<div class="row no-margin dashboard-list-item">
@@ -50,7 +50,7 @@
 										<h4 class="dashboard-list-subtitle">@T("Add & Cut")</h4>
 									</div>
 									<div class="col-xs-6 text-center">
-										<img src="@folderStylePath/Images/cms-add-cut.png" class="img-responsive">
+										<img src="@folderStylePath/Images/cms-add-cut.png" class="img-fluid">
 									</div>
 								</div>
 								<div class="row no-margin dashboard-list-item">
@@ -58,7 +58,7 @@
 										<h4 class="dashboard-list-subtitle">@T("Multi Users")</h4>
 									</div>
 									<div class="col-xs-6 text-center">
-										<img src="@folderStylePath/Images/cms-multi-users.png" class="img-responsive">
+										<img src="@folderStylePath/Images/cms-multi-users.png" class="img-fluid">
 									</div>
 								</div>
 							</div>
@@ -71,7 +71,7 @@
 			<div class="dashboard-box dashboard-box-web" ontouchstart="this.classList.toggle('hover');">
 				<div class="dashboard-card">
 					<div class="dashboard-card-face dashboard-box-front text-center">
-						<div class="dasboard-box-icon"><img src="@folderStylePath/Images/icon-web.png" class="img-responsive"></div>
+						<div class="dasboard-box-icon"><img src="@folderStylePath/Images/icon-web.png" class="img-fluid"></div>
 						<h4 class="dashboard-box-title">@T("Web&Mobile")</h4>
 						<div class="dashboard-box-content">
 							@T("Responsive websites and mobile applications: you think about the content, the rest is Krake™.")
@@ -79,15 +79,15 @@
 					</div>
 					<div class="dashboard-card-face dashboard-box-back">
 						<div class="row no-margin">
-							<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 no-padding">
-								<img src="@folderStylePath/Images/icon-web.png" class="img-responsive dashboard-rear-panel-icon">
+							<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+								<img src="@folderStylePath/Images/icon-web.png" class="img-fluid dashboard-rear-panel-icon">
 							</div>
 							<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
 								<div class="space-20"></div>
 								<h5 class="dashboard-subtitle">@T("Design and development of Mobile Applications")</h5>
 								<h5 class="dashboard-subtitle">@T("Responsive Web Design (RWD)") </h5>
 								<p>@T("for affordable (and usable) solutions by any user, on any device")</p>
-                                <img class="img-responsive" src="@folderStylePath/Images/web.png">
+                                <img class="img-fluid" src="@folderStylePath/Images/web.png">
 							</div>
 						</div>
 					</div>
@@ -98,7 +98,7 @@
 			<div class="dashboard-box dashboard-box-communication" ontouchstart="this.classList.toggle('hover');">
 				<div class="dashboard-card">
 					<div class="dashboard-card-face dashboard-box-front text-center">
-						<div class="dasboard-box-icon"><img src="@folderStylePath/Images/icon-communication.png" class="img-responsive"></div>
+						<div class="dasboard-box-icon"><img src="@folderStylePath/Images/icon-communication.png" class="img-fluid"></div>
 						<h4 class="dashboard-box-title">@T("Communication Gateway")</h4>
 						<div class="dashboard-box-content">
 							@T("A single dashboard to manage direct marketing campaigns: SMS, MAIL, PUSH NOTIFICATION, SOCIAL.")
@@ -106,15 +106,15 @@
 					</div>
 					<div class="dashboard-card-face dashboard-box-back">
 						<div class="row no-margin">
-							<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 no-padding">
-								<img src="@folderStylePath/Images/icon-communication.png" class="img-responsive dashboard-rear-panel-icon">
+							<div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+								<img src="@folderStylePath/Images/icon-communication.png" class="img-fluid dashboard-rear-panel-icon">
 							</div>
 							<div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
 								<div class="space-20"></div>
 								<p><strong>@T("One quick and easy way to manage targeted marketing campaigns and effective.")</strong></p>
 								<div class="row no-margin dashboard-list-item">
 									<div class="col-xs-6 text-center">
-										<img src="@folderStylePath/Images/communication-sms.png" class="img-responsive">
+										<img src="@folderStylePath/Images/communication-sms.png" class="img-fluid">
 									</div>
 									<div class="col-xs-6 no-padding">
 										<h4 class="dashboard-list-subtitle">@T("SMS")</h4>
@@ -122,7 +122,7 @@
 								</div>
 								<div class="row no-margin dashboard-list-item">
 									<div class="col-xs-6 text-center">
-										<img src="@folderStylePath/Images/communication-social.png" class="img-responsive">
+										<img src="@folderStylePath/Images/communication-social.png" class="img-fluid">
 									</div>
 									<div class="col-xs-6 no-padding">
 										<h4 class="dashboard-list-subtitle">@T("Social")</h4>
@@ -130,7 +130,7 @@
 								</div>
 								<div class="row no-margin dashboard-list-item">
 									<div class="col-xs-6 text-center">
-										<img src="@folderStylePath/Images/communication-mail.png" class="img-responsive">
+										<img src="@folderStylePath/Images/communication-mail.png" class="img-fluid">
 									</div>
 									<div class="col-xs-6 no-padding">
 										<h4 class="dashboard-list-subtitle">@T("Mail")</h4>
@@ -150,7 +150,7 @@
 @*<div class="container roboto">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5">
-            <img alt="piattaforma" class="img-responsive img-piattaforma" src="@folderStylePath/Images/piattaforma.png">
+            <img alt="piattaforma" class="img-fluid img-piattaforma" src="@folderStylePath/Images/piattaforma.png">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7">
             <div class="space-20"></div>
@@ -160,43 +160,43 @@
                     <li class="active" role="presentation">
                         <a data-toggle="tab" role="tab" aria-controls="mail-home" href="#mail-home">
                             <span class="cont">
-                                <img class="img-responsive img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-mail.png"></span>
-                            <img class="img-responsive freccia" src="@folderStylePath/Images/freccia-mail.png">
+                                <img class="img-fluid img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-mail.png"></span>
+                            <img class="img-fluid freccia" src="@folderStylePath/Images/freccia-mail.png">
                         </a>
                     </li>
                     <li role="presentation">
                         <a data-toggle="tab" role="tab" aria-controls="app-home" href="#app-home">
                             <span class="cont">
-                                <img class="img-responsive img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-app.png"></span>
-                            <img class="img-responsive freccia" src="@folderStylePath/Images/freccia-app.png">
+                                <img class="img-fluid img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-app.png"></span>
+                            <img class="img-fluid freccia" src="@folderStylePath/Images/freccia-app.png">
                         </a>
                     </li>
                     <li role="presentation">
                         <a data-toggle="tab" role="tab" aria-controls="web" href="#web">
                             <span class="cont">
-                                <img class="img-responsive img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-web.png"></span>
-                            <img class="img-responsive freccia" src="@folderStylePath/Images/freccia-web.png">
+                                <img class="img-fluid img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-web.png"></span>
+                            <img class="img-fluid freccia" src="@folderStylePath/Images/freccia-web.png">
                         </a>
                     </li>
                     <li role="presentation">
                         <a data-toggle="tab" role="tab" aria-controls="notifiche" href="#notifiche">
                             <span class="cont">
-                                <img class="img-responsive img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-notifiche.png"></span>
-                            <img class="img-responsive freccia" src="@folderStylePath/Images/freccia-notifiche.png">
+                                <img class="img-fluid img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-notifiche.png"></span>
+                            <img class="img-fluid freccia" src="@folderStylePath/Images/freccia-notifiche.png">
                         </a>
                     </li>
                     <li role="presentation">
                         <a data-toggle="tab" role="tab" aria-controls="sms" href="#sms">
                             <span class="cont">
-                                <img class="img-responsive img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-sms.png"></span>
-                            <img class="img-responsive freccia" src="@folderStylePath/Images/freccia-sms.png">
+                                <img class="img-fluid img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-sms.png"></span>
+                            <img class="img-fluid freccia" src="@folderStylePath/Images/freccia-sms.png">
                         </a>
                     </li>
                     <li role="presentation">
                         <a data-toggle="tab" role="tab" aria-controls="social" href="#social">
                             <span class="cont">
-                                <img class="img-responsive img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-social.png"></span>
-                            <img class="img-responsive freccia" src="@folderStylePath/Images/freccia-social.png">
+                                <img class="img-fluid img-piattaforma-fasi" alt="krake" src="@folderStylePath/Images/icona-social.png"></span>
+                            <img class="img-fluid freccia" src="@folderStylePath/Images/freccia-social.png">
                         </a>
                     </li>
                 </ul>
@@ -204,7 +204,7 @@
                 <div class="tab-content">
                     <div style="background-color: #A167A3" id="mail-home" class="tab-pane active" role="tabpanel">
                         <div class="testo-piattaforma-fasi">
-                            <img class="img-responsive icone-bianche" src="@folderStylePath/Images/icona-mail-w.png">
+                            <img class="img-fluid icone-bianche" src="@folderStylePath/Images/icona-mail-w.png">
                             <h2 class="titolo-icone">@T("MAIL")</h2>
                             <div class="clear"></div>
                             <b>@T("KRAKE&#8482;")</b> @T("manage through its back office aimed marketing campaigns, newsletter and much more")
@@ -214,7 +214,7 @@
                     </div>
                     <div style="background-color: #EEB377" id="app-home" class="tab-pane" role="tabpanel">
                         <div class="testo-piattaforma-fasi">
-                            <img class="img-responsive icone-bianche" src="@folderStylePath/Images/icona-app-w.png">
+                            <img class="img-fluid icone-bianche" src="@folderStylePath/Images/icona-app-w.png">
                             <h2 class="titolo-icone">@T("MOBILE APP")</h2>
                             <div class="clear"></div>
                             <b>@T("KRAKE&#8482;")</b> @T("Allows you to implement and manage several mobile applications") 
@@ -223,7 +223,7 @@
                     </div>
                     <div style="background-color: #D26774" id="web" class="tab-pane" role="tabpanel">
                         <div class="testo-piattaforma-fasi">
-                            <img class="img-responsive icone-bianche" src="@folderStylePath/Images/icona-web-w.png">
+                            <img class="img-fluid icone-bianche" src="@folderStylePath/Images/icona-web-w.png">
                             <h2 class="titolo-icone">@T("WEB")</h2>
                             <div class="clear"></div>
                             <b>@T("KRAKE&#8482;")</b> @T("Allows you to implement and manage several responsive websites")
@@ -233,7 +233,7 @@
                     </div>
                     <div style="background-color: #447879" id="notifiche" class="tab-pane" role="tabpanel">
                         <div class="testo-piattaforma-fasi">
-                            <img class="img-responsive icone-bianche" src="@folderStylePath/Images/icona-notifiche-w.png">
+                            <img class="img-fluid icone-bianche" src="@folderStylePath/Images/icona-notifiche-w.png">
                             <h2 class="titolo-icone">@T("PUSH NOTIFICATIONS")</h2>
                             <div class="clear"></div>
                             <b>@T("KRAKE&#8482;")</b>, @T("the app will remain up and vigilant thanks to custom push notifications")
@@ -243,7 +243,7 @@
                     </div>
                     <div style="background-color: #A9D287" id="sms" class="tab-pane" role="tabpanel">
                         <div class="testo-piattaforma-fasi">
-                            <img class="img-responsive icone-bianche" src="@folderStylePath/Images/icona-sms-w.png">
+                            <img class="img-fluid icone-bianche" src="@folderStylePath/Images/icona-sms-w.png">
                             <h2 class="titolo-icone">SMS</h2>
                             <div class="clear"></div>
                             <b>@T("KRAKE&#8482;")</b> @T("Allows you to implement and manage marketing campaigns and communications via SMS")
@@ -253,7 +253,7 @@
                     </div>
                     <div style="background-color: #539CB3" id="social" class="tab-pane" role="tabpanel">
                         <div class="testo-piattaforma-fasi">
-                            <img class="img-responsive icone-bianche" src="@folderStylePath/Images/icona-social-w.png">
+                            <img class="img-fluid icone-bianche" src="@folderStylePath/Images/icona-social-w.png">
                             <h2 class="titolo-icone">SOCIAL</h2>
                             <div class="clear"></div>
                             <b>@T("KRAKE&#8482;")</b> @T("Allows you to manage integrated communication streams through your social accounts")
