--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -11830,3 +11830,7 @@ table.autoroute-settings-patterns input, table.autoroute-settings-patterns .text
 .lock-editing-projection-part-field {
     padding-top: 20px;
 }
+
+label.form-check-label input.form-check-input {
+    margin: 0.2em 0 0 -1.85em;
+}
