- Removed unused or broken resource definitions - Removed theadmin/styles/site.css suppression - reducred to 14px the default font size

--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -13,6 +13,10 @@ html {
     background: transparent !important;
 }
 
+body {
+    font-size: 14px;
+}
+
 #layout-content {
     background: #e5e6e6;
 }
