--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -13,6 +13,10 @@ html {
     background: transparent !important;
 }
 
+body {
+    font-size: 14px;
+}
+
 #layout-content {
     background: #e5e6e6;
 }
@@ -1109,7 +1113,7 @@ input[type="number"]:focus {
     line-height: 126px;
 }
 
-    .dashboard-box .dasboard-box-icon .img-responsive {
+    .dashboard-box .dasboard-box-icon .img-fluid {
         display: inline;
     }
 
@@ -11829,4 +11833,14 @@ table.autoroute-settings-patterns input, table.autoroute-settings-patterns .text
 
 .lock-editing-projection-part-field {
     padding-top: 20px;
+}
+
+/* form inputs */
+label.form-check-label input.form-check-input {
+    margin: 0.2em 0 0 -1.85em;
+}
+
+/* Workflows */
+.connection-label {
+    font-size: 0.75em;
 }
