Fixed init script for FullCalendar version 5.6.0

--- a/src/Modules/Laser.Orchard.Events/Views/Parts/Calendar.cshtml
+++ b/src/Modules/Laser.Orchard.Events/Views/Parts/Calendar.cshtml
@@ -5,27 +5,21 @@
     Style.Require("FullCalendar");
     Script.Require("jQuery");
     Script.Require("FullCalendar");
+    Script.Require("FullCalendar.Locales");
 
     using (Script.Foot()) {
         <script type="text/javascript">
-        //<![CDATA[
-            $(document).ready(function() {
-                $('#calendar').fullCalendar({
-                    editable: false,
-                    selectable: true,
-                    header: {
-                        left: 'prev,next',
-                        center: 'title',
-                        right: 'month,agendaWeek'
-                    },
-                    defaultView: 'month',
-                    events: '@Url.Action("GetEvents", "Calendar", new { area = "Laser.Orchard.Events", queryId = Model.Calendar.QueryPartRecord.Id })',
-                    timeFormat: '(HH:mm)',
-                    nextDayThreshold: '00:00:00'
+            //<![CDATA[
+            document.addEventListener('DOMContentLoaded', function () {
+                var calendarElement = document.getElementById('calendar');
+                var calendar = new FullCalendar.Calendar(calendarElement, {
+                    initialView: 'dayGridMonth'
                 });
+
+                calendar.render();
             });
-        //]]>
-    </script>
+                //]]>
+        </script>
     }
 }
 
