--- a/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
@@ -143,7 +143,17 @@
                                                     <div class="row">
                                                         <div class="col-sm-8">
                                                             <h3 class="display-content">
-                                                                <a class="margin-left-5" href="@Url.Action("EditWidget", "Admin", new { area = "Contrib.Widgets", hostId = contentItem.Id, id = widget.Id, returnUrl = ViewContext.RequestContext.HttpContext.Request.Url.PathAndQuery })">@Html.ItemDisplayText(widget) @culture</a>
+                                                                @if (Authorizer.Authorize(Permissions.EditContent, widget)) {
+                                                                    <a class="margin-left-5" 
+                                                                       href="@Url.Action("EditWidget", "Admin",
+                                                                            new { area = "Contrib.Widgets",
+                                                                                hostId = contentItem.Id,
+                                                                                id = widget.Id,
+                                                                                returnUrl = ViewContext.RequestContext.HttpContext.Request.Url.PathAndQuery })">
+                                                                        @Html.ItemDisplayText(widget) @culture</a>
+                                                                } else {
+                                                                    <span class="margin-left-5">@Html.ItemDisplayText(widget) @culture</span>
+                                                                }
                                                             </h3>
                                                             <span class="contentType">
                                                                 - @widget.TypeDefinition.DisplayName
@@ -172,7 +182,9 @@
                                                                         @T(" | ")
                                                                     }
                                                                 }
-                                                                <a href="#" class="remove-widget" data-confirm="@T("Are you sure you want to delete this widget? Note: the widget will be removed permanently when you save the content item.")">@T("Remove")</a>
+                                                                @if (Authorizer.Authorize(Permissions.DeleteContent, widget)) {
+                                                                    <a href="#" class="remove-widget" data-confirm="@T("Are you sure you want to delete this widget? Note: the widget will be removed permanently when you save the content item.")">@T("Remove")</a>
+                                                                }
                                                             </div>
                                                         </div>
                                                     </div>
