--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -2,8 +2,8 @@
 
 @font-face {
     font-family: 'krake';
-    src: url('fonts/HANDGOTB.eot');
-    src: local('☺'), url('fonts/HANDGOTB.woff') format('woff'), url('fonts/HANDGOTB.ttf') format('truetype'), url('fonts/HANDGOTB.svg') format('svg');
+    src: url('../Styles/fonts/HANDGOTB.eot');
+    src: local('☺'), url('../Styles/fonts/HANDGOTB.woff') format('woff'), url('../Styles/fonts/HANDGOTB.ttf') format('truetype'), url('../Styles/fonts/HANDGOTB.svg') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -395,7 +395,7 @@ button.link:hover {
 
 #search-box {
     overflow: hidden;
-    background: url(Images/search-icon.png) no-repeat right #fff;
+    background: url(../Styles/images/search-icon.png) no-repeat right #fff;
     -moz-appearance: none;
     min-width: 230px;
 }
@@ -649,7 +649,7 @@ input.tokenized {
 }
 
 .tokenized-popup {
-    background: rgba(0, 0, 0, 0) url("images/list-arrow.png") no-repeat scroll 0 0;
+    background: rgba(0, 0, 0, 0) url("../Styles/images/list-arrow.png") no-repeat scroll 0 0;
     cursor: pointer;
     height: 28px;
     margin-top: 1px;
@@ -702,7 +702,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 input[type=number]:hover::-webkit-inner-spin-button {
-    background: #eee url('images/arrow-number.png') no-repeat 50% 50%;
+    background: #eee url('../Styles/images/arrow-number.png') no-repeat 50% 50%;
     width: 14px;
     height: 14px;
     padding: 4px;
@@ -1180,7 +1180,7 @@ input[type="number"]:focus {
 
 /**** zone header ****/
 .krake-logo {
-    background: rgba(0, 0, 0, 0) url("images/krake-orizontal.png") no-repeat scroll 0 0 !important;
+    background: rgba(0, 0, 0, 0) url("../Styles/images/krake-orizontal.png") no-repeat scroll 0 0 !important;
     display: block !important;
     height: 60px !important;
     margin: auto !important;
@@ -1557,11 +1557,11 @@ fieldset small {
 }
 
 .switch-for-switchable.summary-switched .detail-view {
-    background: rgba(0, 0, 0, 0) url("Images/detail-view.png") no-repeat scroll left top;
+    background: rgba(0, 0, 0, 0) url("../Styles/images/detail-view.png") no-repeat scroll left top;
 }
 
 .switch-for-switchable.detail-switched .summary-view {
-    background: rgba(0, 0, 0, 0) url("Images/summary-view-on.png") no-repeat scroll left top;
+    background: rgba(0, 0, 0, 0) url("../Styles/images/summary-view-on.png") no-repeat scroll left top;
 }
 
 /* Add padding to button because if not comment in widget layer the buttons overwrite other objects */
