Correction on css references to Orchard.MediaLibrary

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/FrontEndClientStorage/Index.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/FrontEndClientStorage/Index.cshtml
@@ -6,9 +6,9 @@
         Script.Require("jQuery").AtFoot();
         Script.Require("jQueryUI").AtFoot();
 
-        Style.Include("orchard-medialibrary-admin.css");
-        Style.Include("orchard-mediaproviders-admin.css");
-        Style.Include("orchard-clientstorage-admin.css");
+        Style.Include("~/modules/Orchard.MediaLibrary/Styles/orchard-medialibrary-admin.css");
+        Style.Include("~/modules/Orchard.MediaLibrary/Styles/orchard-mediaproviders-admin.css");
+        Style.Include("~/modules/Orchard.MediaLibrary/Styles/orchard-clientstorage-admin.css");
 
         Script.Require("jQueryFileUpload").AtFoot();
         Script.Require("Knockout").AtFoot();
