Added settings specific for front end TinyMce rendering.

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/TinyMceSiteSettings.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/TinyMceSiteSettings.cshtml
@@ -9,19 +9,34 @@
         <label for="@Html.FieldIdFor(m => m.InitScript)">@T("Init Script")</label>
         @Html.TextAreaFor(m => m.InitScript, new { @class = "text large" })
         <span class="hint">@T("Content of the init method for TinyMce.")</span>
-        <button type="button" id="btnDefaultInitValue" style="background-color:lightgray;color:white">@T("Show/Hide default value")</button>
-        <span id="lblDefaultInitValue" class="hint" style="display:none">@Html.Raw(Model.DefaultInitScript.Replace("\n", "<br/>"))</span>
+        <button type="button" id="btnDefaultInitValue" style="background-color: lightgray; color: white">@T("Show/Hide default init script value")</button>
+        <span id="lblDefaultInitValue" class="hint" style="display: none">@Html.Raw(Model.DefaultInitScript.Replace("\n", "<br/>"))</span>
+    </div>
+    <div>
+        <label for="@Html.FieldIdFor(m => m.FrontendInitScript)">@T("Frontend Init Script")</label>
+        @Html.TextAreaFor(m => m.FrontendInitScript, new { @class = "text large" })
+        <span class="hint">@T("Content of the init method for TinyMce when it is executed at front end")</span>
+        <button type="button" id="btnFrontendDefaultInitValue" style="background-color: lightgray; color: white">@T("Show/Hide default init script value")</button>
+        <span id="lblFrontendDefaultInitValue" class="hint" style="display: none">@Html.Raw(Model.FrontendDefaultInitScript.Replace("\n", "<br/>"))</span>
     </div>
     <div>
         <label for="@Html.FieldIdFor(m => m.AdditionalPlugins)">@T("Additional Plugins")</label>
         @Html.TextAreaFor(m => m.AdditionalPlugins, new { @class = "text large" })
         <span class="hint">@T("A list of additional plugins. Use newline as separator. If a plugin does not have a plugin.min.js file, please specify the correct file name in the plugin folder.<br/>Examples:<br/>plugin1<br/>plugin2<br/>pligin3/editor_plugin.js")</span>
     </div>
+    <div>
+        <label for="@Html.FieldIdFor(m => m.FrontendAdditionalPlugins)">@T("Frontend Additional Plugins")</label>
+        @Html.TextAreaFor(m => m.FrontendAdditionalPlugins, new { @class = "text large"})
+        <span class="hint">@T("A list of additional plugins when TinyMce is executed at front end. Use newline as separator. If a plugin does not have a plugin.min.js file, please specify the correct file name in the plugin folder.<br/>Examples:<br/>plugin1<br/>plugin2<br/>pligin3/editor_plugin.js")</span>
+    </div>
 </fieldset>
 <script type="text/javascript">
     $(function () {
         $("#btnDefaultInitValue").click(function (e) {
             $("#lblDefaultInitValue").toggle();
+        });
+        $("#btnFrontendDefaultInitValue").click(function (e) {
+            $("#lblFrontendDefaultInitValue").toggle();
         });
     });
 </script>
